# lmma_trendminer

./: .gitignore  DEVELOPER_GUIDE.md  README.md  pyproject.toml  tasks.ps1  test2.py  test3.py
data/: intent_data.csv  ner_eval.jsonl  ner_train.jsonl
lmma_trendminer/: config.py  config.yaml  runner.py  types.py
lmma_trendminer/pipeline/: cluster.py  label.py  metadata.py  metadata_from_entities.py  orchestrator.py  reduce.py  retrieve.py
lmma_trendminer/providers/: custom_intent.py  custom_ner.py  intent.py  ner.py  registry.py  vector_store.py
lmma_trendminer/summarizers/: groq_sum.py
lmma_trendminer/utils/: date_ranges.py
tools/ingest/configs/: opensearch-ingest-data.yaml
tools/train/: convert_ner_data_to_jsonl.py  intent_cli.py  make_ner_jsonl_from_py.py  ner_cli.py  train_ner_cli.py  train_ner_final.py  train_ner_final_jsonl.py
tools/train/configs/: ner-bert.yaml
tools/train/ner_datasets/: ner_data.py
